--- a/suchana-ui/package.json
+++ b/suchana-ui/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.3.1",
     "help": "^3.0.2",
     "jquery": "^3.4.1",
+    "ng-multiselect-dropdown": "^0.2.3",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
